Primera pagina Funcional completa

--- a/index.html
+++ b/index.html
@@ -1,10 +1,61 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <title>Pizzeria los 3 Tipitos</title>
+    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="icon" href="../retobar/Imagenes/logo.ico">
+    <meta charset="utf-8">
 </head>
 <body>
+
+    <header>
+        <p>
+            <h1>
+                Pizzeria los 3 Tipitos
+            </h1>
+        </p>
+
+    </header>
+
+    <h2>
+        Proba nuestras pizzas
+    </h2>
+
+    <nav>
+        <ul>
+            <li><b><a href="index.html">Inicio</a></b></li>
+            <li><b><a href="menu.html">Nuestro menu</a></b></li>
+            <li><b><a href="#footer">Contacto</a></b></li>
+            <li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
+        </ul>
+    </nav>
+
+
+    <div id="cuerpo">
+        <h3>
+            Si buscabas una buena pizza en almagro llegaste al lugar correcto. veni y mira lo que te ofrecemos para comer rico
+        </h3>
+        <div id="menu_lista">
+            <ul>
+                <li> <img src="imagenes/2C0.gif" /></li>
+                <li><img src="imagenes/d0c2317464103652c8f711d7d7a8a9a1.gif" width="500px" height="350px"/></li>
+             </ul>
+        </div>
+
+
+    </div>
+
+
+    <footer id="footer">
+        <ul>
+            <li><a href="#">Youtube<i class="fa fa-youtube"></i></a> Los3tipitos</li>
+            <li><a href="#">Facebook<i class="fa fa-facebook"></i></a> Los3tipitos</li>
+            <li><a href="#">Twitter<i class="fa fa-twitter"></i></a> @los3tipitos</li>
+            <li>Dirección Yatay 230 esquina Diaz Velez </li>
+        </ul>
+    </footer>
+
 
 </body>
 </html>
