--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>Pizzeria los 3 Tipitos</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="estilos.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
 </head>
@@ -32,25 +32,24 @@
 
 		<div id="cuerpo">
 			<ul class="menu_lista">
-				<li class="menu_lista_item"><b>Muzzarela</b>_______________________________________________________________ $600    $550</li>
-				<!---->
-				<li class="menu_lista_item"><b>Jamon y Morrones</b>_________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Napolitana</b>_______________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Jamón</b>___________________________________________________________________$700    $650</li>
-				<li class="menu_lista_item"><b>Napolitana y Jamón</b>________________________________________________________$800    $750</li>
-				<li class="menu_lista_item"><b>Calabresa</b>________________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Española</b>_________________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Fugazzeta c/Jamón</b>________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Provolone</b>________________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Super Provolone</b>__________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Roquefort</b>________________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Jamón y Ananá</b>____________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Fugazza</b>__________________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Fugazza c/Queso</b>__________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Verdura</b>__________________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Primavera</b>________________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Cuatro Quesos</b>____________________________________________________________$750    $700</li>
-				<li class="menu_lista_item"><b>Doble Muzzarela</b>__________________________________________________________$750    $700</li>
+				<li class="menu_lista_item"><b>Muzzarela</b>_____________________________ $600  __  $550</li>
+				<li class="menu_lista_item"><b>Jamon y Morrones</b>_______________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Napolitana</b>_____________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Jamón</b>__________________________________$700  __  $650</li>
+				<li class="menu_lista_item"><b>Napolitana y Jamón</b>_____________________$800  __  $750</li>
+				<li class="menu_lista_item"><b>Calabresa</b>______________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Española</b>_______________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Fugazzeta c/Jamón</b>______________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Provolone</b>______________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Super Provolone</b>________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Roquefort</b>______________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Jamón y Ananá</b>__________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Fugazza</b>________________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Fugazza c/Queso</b>________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Verdura</b>________________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Primavera</b>______________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Cuatro Quesos</b>__________________________$750  __  $700</li>
+				<li class="menu_lista_item"><b>Doble Muzzarela</b>________________________$750  __  $700</li>
 
 
 			</ul>
