--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pizzeria los 3 Tipitos</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="icon" href="../retobar/Imagenes/logo.ico">
+    <link rel="icon" href="imagenes/logo.ico">
     <meta charset="utf-8">
 </head>
 <body>
