Implementacion del form

--- a/menu.html
+++ b/menu.html
@@ -25,8 +25,8 @@
 				<ul>
 					<li><b><a href="index.html">Inicio</a></b></li>
 					<li><b><a href="menu.html">Nuestro menu</a></b></li>
-					<li><b><a href="#footer">Contacto</a></b></li>
 					<li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
+					<li><b><a href="contacto.html">Contacto</a></b></li>
 				  </ul>
 		</nav>
 
