agregado requires en form

--- a/contacto.html
+++ b/contacto.html
@@ -35,14 +35,14 @@
             <!--Dejo action vacio, ya que no estamos enviando ningun dato, solo 
             si se conecta a una db-->
 			<form action="" method="POST">
-                <label style="color: aliceblue;font-weight: bold;" for="nombre" required>Nombre</label>
-                <input type="text" name="nombre">
+                <label style="color: aliceblue;font-weight: bold;" for="nombre">Nombre</label>
+                <input type="text" name="nombre" required="">
                 <p></p>
-                <label style="color: aliceblue;font-weight: bold;" for="Apellido" required>Apellido</label>
-                <input type="text" name="Apellido">
+                <label style="color: aliceblue;font-weight: bold;" for="Apellido">Apellido</label>
+                <input type="text" name="Apellido" required="">
                 <p></p>
-                <label style="color: aliceblue;font-weight: bold;" required>Email</label>
-                <input type="email" name="email">
+                <label style="color: aliceblue;font-weight: bold;">Email</label>
+                <input type="email" name="email" required="">
                 <p></p>             
                 <label style="color: aliceblue;font-weight: bold;">Comentario</label>
                 <p></p>
