Agregado se Section para esqueleto html

--- a/contacto.html
+++ b/contacto.html
@@ -16,42 +16,44 @@
 		
 	</header>
 
-	<h2>
+	<section>
+		<h2>
 			Proba nuestras pizzas
 		</h2>
 
 		<nav>
-				<ul>
-					<li><b><a href="index.html">Inicio</a></b></li>
-					<li><b><a href="menu.html">Nuestro menu</a></b></li>
-					<li><b><a href="#footer">Contacto</a></b></li>
-					<li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
-                    <li><b><a href="contacto.html">Contacto</a></b></li>
-				  </ul>
+			<ul>
+				<li><b><a href="index.html">Inicio</a></b></li>
+				<li><b><a href="menu.html">Nuestro menu</a></b></li>
+				<li><b><a href="#footer">Contacto</a></b></li>
+				<li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
+				<li><b><a href="contacto.html">Contacto</a></b></li>
+			</ul>
 		</nav>
 
 
 		<div id="cuerpo">
-            <!--Dejo action vacio, ya que no estamos enviando ningun dato, solo 
-            si se conecta a una db-->
+			<!--Dejo action vacio, ya que no estamos enviando ningun dato, solo
+		si se conecta a una db-->
 			<form action="" method="POST">
-                <label style="color: aliceblue;font-weight: bold;" for="nombre">Nombre</label>
-                <input type="text" name="nombre" required="">
-                <p></p>
-                <label style="color: aliceblue;font-weight: bold;" for="Apellido">Apellido</label>
-                <input type="text" name="Apellido" required="">
-                <p></p>
-                <label style="color: aliceblue;font-weight: bold;">Email</label>
-                <input type="email" name="email" required="">
-                <p></p>             
-                <label style="color: aliceblue;font-weight: bold;">Comentario</label>
-                <p></p>
-                <textarea></textarea>
-                <p></p>
-                <input type="submit"  value="Enviar">
+				<label style="color: aliceblue;font-weight: bold;" for="nombre">Nombre</label>
+				<input type="text" name="nombre" required="">
+				<p></p>
+				<label style="color: aliceblue;font-weight: bold;" for="Apellido">Apellido</label>
+				<input type="text" name="Apellido" required="">
+				<p></p>
+				<label style="color: aliceblue;font-weight: bold;">Email</label>
+				<input type="email" name="email" required="">
+				<p></p>
+				<label style="color: aliceblue;font-weight: bold;">Comentario</label>
+				<p></p>
+				<textarea></textarea>
+				<p></p>
+				<input type="submit" value="Enviar">
 
-            </form>
+			</form>
 		</div>
+	</section>
 
 		<footer id="footer">
 		<ul>
