--- a/index.html
+++ b/index.html
@@ -18,33 +18,35 @@
 
     </header>
 
-    <h2>
-        Proba nuestras pizzas
-    </h2>
+    <section>
+        <h2>
+            Proba nuestras pizzas
+        </h2>
 
-    <nav>
-        <ul>
-            <li><b><a href="index.html">Inicio</a></b></li>
-            <li><b><a href="menu.html">Nuestro menu</a></b></li>
-            <li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
-            <li><b><a href="contacto.html">Contacto</a></b></li>
-        </ul>
-    </nav>
-
-
-    <div id="cuerpo">
-        <h3>
-            Si buscabas una buena pizza en almagro llegaste al lugar correcto. veni y mira lo que te ofrecemos para comer rico
-        </h3>
-        <div id="menu_lista">
+        <nav>
             <ul>
-                <li> <img src="imagenes/2C0.gif" /></li>
-                <li><img src="imagenes/d0c2317464103652c8f711d7d7a8a9a1.gif" width="500px" height="350px"/></li>
-             </ul>
+                <li><b><a href="index.html">Inicio</a></b></li>
+                <li><b><a href="menu.html">Nuestro menu</a></b></li>
+                <li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
+                <li><b><a href="contacto.html">Contacto</a></b></li>
+            </ul>
+        </nav>
+
+
+        <div id="cuerpo">
+            <h3>
+                Si buscabas una buena pizza en almagro llegaste al lugar correcto. veni y mira lo que te ofrecemos para comer rico
+            </h3>
+            <div id="menu_lista">
+                <ul>
+                    <li> <img src="imagenes/2C0.gif" /></li>
+                    <li><img src="imagenes/d0c2317464103652c8f711d7d7a8a9a1.gif" width="500px" height="350px" /></li>
+                </ul>
+            </div>
+
+
         </div>
-
-
-    </div>
+    </section>
 
 
     <footer id="footer">
