--- a/menu.html
+++ b/menu.html
@@ -17,17 +17,18 @@
 	</header>
 
 	
-	<h2>
-		Proba nuestras pizzas
-	</h2>
+	<section>
+		<h2>
+			Proba nuestras pizzas
+		</h2>
 
 		<nav>
-				<ul>
-					<li><b><a href="index.html">Inicio</a></b></li>
-					<li><b><a href="menu.html">Nuestro menu</a></b></li>
-					<li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
-					<li><b><a href="contacto.html">Contacto</a></b></li>
-				  </ul>
+			<ul>
+				<li><b><a href="index.html">Inicio</a></b></li>
+				<li><b><a href="menu.html">Nuestro menu</a></b></li>
+				<li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
+				<li><b><a href="contacto.html">Contacto</a></b></li>
+			</ul>
 		</nav>
 
 		<div id="cuerpo">
@@ -53,10 +54,10 @@
 
 
 			</ul>
-		
-		</div>
-	
 
+		</div>
+
+	</section>
 	
 	
 
