--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -16,26 +16,28 @@
 		
 	</header>
 
-	<h2>
+	<section>
+		<h2>
 			Proba nuestras pizzas
 		</h2>
 
 		<nav>
-				<ul>
-					<li><b><a href="index.html">Inicio</a></b></li>
-					<li><b><a href="menu.html">Nuestro menu</a></b></li>
-					<li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
-					<li><b><a href="contacto.html">Contacto</a></b></li>
-				  </ul>
+			<ul>
+				<li><b><a href="index.html">Inicio</a></b></li>
+				<li><b><a href="menu.html">Nuestro menu</a></b></li>
+				<li><b><a href="sobrenosotros.html">Sobre nosotros</a></b></li>
+				<li><b><a href="contacto.html">Contacto</a></b></li>
+			</ul>
 		</nav>
 
 
 		<div id="cuerpo">
 			<h3>
-				  Somos 3 amigos que en plena crisis nos animamos a salir adelante y a invertir. Somos un restaurante con un variado menú de pizza y empanadas, brindamos servicios desde el año 2020. Con ganas y esfuerzo para cumplir el objetivo de ofrecer las mejores pizzas sin tener que gastar de mas.
-				  
+				Somos 3 amigos que en plena crisis nos animamos a salir adelante y a invertir. Somos un restaurante con un variado menú de pizza y empanadas, brindamos servicios desde el año 2020. Con ganas y esfuerzo para cumplir el objetivo de ofrecer las mejores pizzas sin tener que gastar de mas.
+
 			</h3>
 		</div>
+	</section>
 
 		<footer id="footer">
 		<ul>
