--- a/contacto.html
+++ b/contacto.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Pizzeria los 3 Tipitos</title>
-	<link rel="stylesheet" type="text/css" href="estilos.css">
+	<link rel="stylesheet" type="text/css" href="style/estilos.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
 </head>
+
+
 <body>
 	<header>
 			<p>
@@ -31,27 +33,32 @@
 		</nav>
 
 	<section>
-		<div>
-			<form action="#" target="" method="get" name="DatosPersonales">
+	
+			
+
+			<form action="" id='formulario'>
 
 				<label for="nombre">Nombre</label>
-				<input type="text" name="nombre" id="nombre" placeholder="Nombre" />
+				<input type="text" name="nombre" id='nombre' />
 
 				<label for="apellidos">Apellidos</label>
-				<input type="text" name="apellidos" id="apellidos" placeholder="Apellido" />
+				<input type="text" name="apellido" id='apellido' />
 
 				<label for="email" >Email</label>
-				<input type="email" name="email" id="email" placeholder="Mail" required />
+				<input type="email" name="email" id='email' />
 
 				<label for="asunto">Asunto</label>
-				<input type="text" name="asunto" id="asunto" placeholder="Asunto" />
+				<input type="text" name="asunto" id='asunto' />
 
 				<label for="mensaje">Mensaje</label>
 				<textarea name="mensaje" for="mensaje" placeholder="Describe brevemente en menos de 300 carácteres" maxlength="300"></textarea>
 
-				<input type="submit" name="enviar" value="Enviar" />
+				<input type="submit" onclick='return enviarFormulario();' name="submit" value="Enviar" />
 			</form>
-		</div>
+			<div id="error"></div>
+			<script type='text/javascript'  src='js/formulario.js'></script>
+
+
 	</section>
 
 
